..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
........S. [ZBXNEXT-1663] added support for notification macros {TRIGGER.NAME.ORIG}, {ITEM.NAME.ORIG}, {ITEM.KEY.ORIG} (dimir)

Bug fixes:
..F....... [ZBX-6654] fixed inconsistent column order in the item prototype list (Ivo)
A......... [ZBX-6644] fixed sorting by history and trends fields in itemprototype.get API (Ivo)
..F....... [ZBX-6631] made the "Debug" link available for guest users (Pavels)
...G...... [ZBX-5589] added validation of timeout and retry count parameters of net.dns item (aleksej, dimir)
..F....... [ZBX-6575] fixed frontend permission validation for actions, hosts, maintenance, maps, proxies, screens and templates (Eduard)
..F....... [ZBX-6626] fixed time displaing for graphs (Eduard)
..F....... [ZBX-6597] removed debug trace for unsuccessful login if debug mode is enabled for guest group (Toms)
..F....... [ZBX-6562] fixed incorrect rounding in graphs for "s" units, fixed < 1 ms and 0s interval (Oleg)
....I..PS. [ZBX-5953] added output of web monitoring status (yes/no) when configuring Proxy or Server (aleksej)
A......... [ZBX-6613] fixed trigger prototype create/update error message (Eduard)
..F....... [ZBX-6619] fixed template context not remembered when deleting screen from template with mass delete (Toms)
A......... [ZBX-6614] fixed array_keys() expects array when calling CTemplateScreen get() with countOutput parameter (Toms)
..F....... [ZBX-6595] fixed empty "sort" parameter in the GET request causing the web monitoring list to be displayed incorrectly (Pavels)
...G...... [ZBX-4636] fixed broken UFT-8 characters in log item on Windows agent when encoding parameter is not set (aleksej)
A......... [ZBX-6465] fixed undefined index, when inventory mode is not set in API call (Toms)